# isyatirim-bist-screener

./: .env.example  .gitignore  Makefile  README.md  bist_genel_analiz_raporu.json  bist_genel_analiz_raporu.xlsx  details1.md  isyatirim_analiz.py  pyproject.toml  requirements.txt  temettu_analizi_workflow.py
.github/workflows/: run.yml
skills/temettu-analizi/: SKILL.md
tests/: test_isyatirim_analiz.py
